--- a/client/src/app/style/global.scss
+++ b/client/src/app/style/global.scss
@@ -1,3 +1,27 @@
 :root {
-  background-color: (--tg-theme-bg-color)
+  --font-family-main: "Gill Sans", "Times New Roman", serif;
+
+  // S
+  --font-size-s: 12px;
+  --font-line-s: 20px;
+  --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
+
+  // M
+  --font-size-m: 16px;
+  --font-line-m: 24px;
+  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+
+  // L
+  --font-size-l: 24px;
+  --font-line-l: 32px;
+  --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+
+  --bg_color: #f2f2f7;
+  --section_bg_color: #fff;
+  --text_color: #000000;
+  --button_color: #5ac8fb;
+  --button_text_color: #ffffff;
+  --destructive_text_color: #ff3d32;
+  --link_color: #1887ff;
+  --border_radius: 10px;
 }
