add daily goal progress

--- a/client/src/features/update-pages-read/ui/update-pages-read.module.scss
+++ b/client/src/features/update-pages-read/ui/update-pages-read.module.scss
@@ -15,7 +15,7 @@
 
 .counter_btn_block {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 
   .counter_btn {
     background-color: var(--button_color);
