--- a/client/src/entities/book/ui/book.module.scss
+++ b/client/src/entities/book/ui/book.module.scss
@@ -1,7 +1,12 @@
-.progress_block {
+.progress_section {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  flex-direction: column;
+
+  .progress_block {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+  }
 
   .progress {
     width: 100%;
