--- a/client/src/app/style/global.scss
+++ b/client/src/app/style/global.scss
@@ -16,8 +16,7 @@
   --font-line-l: 32px;
   --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
-  --bg_color: #f2f2f7;
-  --section_bg_color: #fff;
+  --section_bg_color: #f2f2f7;
   --text_color: #000000;
   --button_color: #5ac8fb;
   --button_text_color: #ffffff;
