--- a/client/src/shared/ui/footer/footer.module.scss
+++ b/client/src/shared/ui/footer/footer.module.scss
@@ -5,14 +5,13 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 50px;
   background-color: var(--section_bg_color);
-  border-radius: var(--border_radius);
+  border-radius: var(--border_radius) var(--border_radius);
 
   .footer__container {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    padding: 0 20px;
+    padding: 20px;
   }
 }
